--- a/SSFR_Movies/SSFR_Movies/Views/FavoritesMoviesPage.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/FavoritesMoviesPage.xaml
@@ -6,6 +6,11 @@
     xmlns:ffimage="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
     xmlns:fftransformations="clr-namespace:FFImageLoading.Transformations;assembly=FFImageLoading.Transformations"
     BackgroundColor="#161513">
+
+    <ContentPage.Resources>
+        <ResourceDictionary Source="/ResourceDictionaries/GenResourceDictionary.xaml" />
+    </ContentPage.Resources>
+
     <ContentPage.Content>
         <StackLayout>
 
