--- a/SSFR_Movies/SSFR_Movies/Views/MainPage.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/MainPage.xaml
@@ -12,4 +12,6 @@
 
     <pages:FavoritesMoviesPage Title="Favorites" Icon="Heart.png" />
 
+    <pages:About Title="About" Icon="About.png" />
+
 </TabbedPage>
